@@ -1,13 +1,16 @@
 package com.grepp.smartwatcha.app.model.recommend;
 
-import com.grepp.smartwatcha.app.controller.api.recommend.payload.MovieTagResponse;
 import com.grepp.smartwatcha.app.controller.api.recommend.payload.MovieRecommendResponse;
 import com.grepp.smartwatcha.app.model.recommend.service.recenttag.RecommendTagBasedMovieJpaService;
 import com.grepp.smartwatcha.app.model.recommend.service.recenttag.RecommendTagBasedMovieNeo4jService;
 import com.grepp.smartwatcha.infra.jpa.entity.MovieEntity;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import java.util.*;
+
+import java.util.Collections;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -16,74 +19,37 @@ public class RecommendTagBasedMovieService {
     private final RecommendTagBasedMovieJpaService jpaService;
     private final RecommendTagBasedMovieNeo4jService neo4jService;
 
+    // 가장 최근에 준 태그 기반 추천
     public List<MovieRecommendResponse> recommendMoviesByTag(Long userId) {
         Long recentMovieId = jpaService.findMostRecentRatedMovieId(userId);
-        if (recentMovieId == null) return Collections.emptyList();
+        if (recentMovieId == null) return List.of();
 
-        List<String> targetTags = neo4jService.findTagsByMovieId(recentMovieId);
-        if (targetTags.isEmpty()) return Collections.emptyList();
+        List<String> preferredTags = jpaService.findTagsOfMovieByUser(userId, recentMovieId);
+        if (preferredTags.isEmpty()) return List.of();
 
-        List<Long> unratedMovieIds = jpaService.findUnratedMovieIdsByUser(userId);
-        if (unratedMovieIds.isEmpty()) return Collections.emptyList();
+        List<MovieEntity> allMovies = jpaService.findAllReleasedMovies();
+        List<Long> ratedMovieIds = jpaService.findRatedMovieIdsByUser(userId);
+        List<Long> movieIds = allMovies.stream().map(MovieEntity::getId).toList();
+        Map<Long, Double> avgMap = jpaService.getAverageScoreMap(movieIds);
 
-        List<MovieTagResponse> tagInfos = neo4jService.findTagsByMovieIdList(unratedMovieIds);
-        List<Long> tagMatchedMovieIds = filterMoviesByTagMatch(tagInfos, targetTags);
-        if (tagMatchedMovieIds.isEmpty()) return Collections.emptyList();
+        Map<Long, List<String>> tagMap = neo4jService.findTagsByMovieIdList(movieIds);
 
-        Map<Long, Double> topMovieScoreMap = jpaService.findTopRatedMovieScoresByIds(tagMatchedMovieIds);
-        if (topMovieScoreMap.isEmpty()) return Collections.emptyList();
-
-        List<MovieEntity> topMovies = jpaService.findMoviesByIds(new ArrayList<>(topMovieScoreMap.keySet()));
-        Map<Long, List<String>> tagMap = mapTagsByMovieId(tagInfos, topMovieScoreMap.keySet());
-
-        return convertToRecommendResponses(topMovies, topMovieScoreMap, tagMap);
-    }
-
-    private List<Long> filterMoviesByTagMatch(List<MovieTagResponse> infos, List<String> targetTags) {
-        List<Long> matchedIds = new ArrayList<>();
-        for (MovieTagResponse info : infos) {
-            for (String tag : info.getTags()) {
-                if (targetTags.contains(tag)) {
-                    matchedIds.add(info.getMovieId());
-                    break;
-                }
-            }
-        }
-        return matchedIds;
-    }
-
-    private Map<Long, List<String>> mapTagsByMovieId(List<MovieTagResponse> infos, Set<Long> targetIds) {
-        Map<Long, List<String>> result = new HashMap<>();
-        for (MovieTagResponse info : infos) {
-            if (targetIds.contains(info.getMovieId())) {
-                result.put(info.getMovieId(), info.getTags());
-            }
-        }
-        return result;
-    }
-
-    private List<MovieRecommendResponse> convertToRecommendResponses(
-            List<MovieEntity> movies,
-            Map<Long, Double> scoreMap,
-            Map<Long, List<String>> tagMap
-    ) {
-        List<MovieRecommendResponse> responses = new ArrayList<>();
-        for (MovieEntity movie : movies) {
-            Long id = movie.getId();
-            Double score = scoreMap.getOrDefault(id, 0.0);
-            List<String> tags = tagMap.getOrDefault(id, Collections.emptyList());
-
-            responses.add(new MovieRecommendResponse(
-                    movie.getId(),
-                    movie.getTitle(),
-                    movie.getReleaseDate(),
-                    movie.getCountry(),
-                    movie.getPoster(),
-                    score,
-                    Collections.emptyList(),
-                    tags
-            ));
-        }
-        return responses;
+        return allMovies.stream()
+                .filter(movie -> !ratedMovieIds.contains(movie.getId()))
+                .filter(movie -> {
+                    List<String> movieTags = tagMap.getOrDefault(movie.getId(), List.of());
+                    return !Collections.disjoint(movieTags, preferredTags);
+                })
+                .sorted(Comparator.comparingDouble(
+                        movie -> -avgMap.getOrDefault(movie.getId(), 0.0)
+                ))
+                .limit(10)
+                .map(movie -> MovieRecommendResponse.from(
+                        movie,
+                        avgMap.getOrDefault(movie.getId(), 0.0),
+                        List.of(),
+                        tagMap.getOrDefault(movie.getId(), List.of())
+                ))
+                .toList();
     }
 }
